--- a/pages/d3_example/index.html
+++ b/pages/d3_example/index.html
@@ -14,6 +14,9 @@ description: ""
 mu:    <span data-var="mu" data-step="0.02" data-format="%.2f" class="TKAdjustableNumber "> </span>
 sigma: <span data-var="sigma" data-step="0.02" data-format="%.2f" class="TKAdjustableNumber "> </span>
 
+sin scale: <span data-var="sinYscale" data-step="0.02" data-format="%.2f" class="TKAdjustableNumber "> </span>
+
+
 {% include d3 %}
 {% include nv.d3 %}
 {% include tangle %}
